# ellipser

./: .gitignore  CMakeLists.txt
source/private/: Ellipse.cpp  main.cpp
source/public/: Ellipse.h
